Fix chat box alignment, font size, width, and get rid of bouncing and instead highlight the box when messages arrive.

--- a/css/jquery.ui.chatbox.css
+++ b/css/jquery.ui.chatbox.css
@@ -21,9 +21,10 @@
 
 .ui-chatbox-log {
     padding: 3px 3px 3px 3px;
-    height: 150px;
+    height: 300px;
     overflow-y: auto;
     background: #FFFFFF;
+    font-size: 75%;
 }
 
 .ui-chatbox-input {
@@ -31,6 +32,7 @@
     border-top: 1px solid grey;
     overflow: hidden;
     /* background: #FFFFFF; */
+    font-size: 75%;
 }
 
 .ui-chatbox-input-box {
